# copilot-tracker

./: .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .release-please.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.github/: PAT_PERMISSIONS.md
.github/workflows/: pr-checks.yml  release.yml
docs/: 01-spec-copilot-tracker.md  02-research-copilot-tracker.md  03-implementation-copilot-tracker.md  PRD-TAURI-MIGRATION.md  PROGRESS.md  README.md  copilot-tracker-implementation.md
docs/audits/: 2026-02-15-tauri-app-audit.md
docs/issues/: Issues #29_Windows Crash on Startup (State Initialization Race Condition).md
docs/plans/: 2025-02-01-release-build-fixes.md  2026-02-02-tauri-tray-icon-rendering-design.md  2026-02-02-tauri-tray-icon-rendering.md  2026-02-02-windows-webview2-runtime-flow-design.md  2026-02-09-floating-usage-widget-design.md
docs/tauri-migration/: IMPLEMENTATION.md  RESEARCH.md  tauri-v2-auth-webview-checklist.md
resources/: icon.icns
scripts/: debug_data_fetch.js  validate-assets.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  remote-github.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  lib.rs  main.rs  store.rs  theme.rs  tray_icon_renderer.rs  updater.rs  usage.rs
src-tauri/tests/: tray_icon_renderer_test.rs
src/main/: config.ts  index.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html  widget.html
src/renderer/src/: App.tsx  main.tsx  tauri-adapter.ts  widget.tsx
src/renderer/src/components/auth/: LoginPrompt.tsx  index.ts
src/renderer/src/components/dashboard/: Dashboard.tsx  HistoryTable.tsx  PredictionCard.tsx  UsageCard.tsx  UsageChart.tsx  index.ts
src/renderer/src/components/icons/: GitHubIcon.tsx
src/renderer/src/components/layout/: Header.tsx  Layout.tsx  index.ts
src/renderer/src/components/settings/: Settings.tsx  index.ts
src/renderer/src/components/ui/: UpdateBanner.tsx  button.tsx  card.tsx  gauge.tsx  index.ts  progress.tsx  skeleton.tsx  tabs.tsx  tooltip.tsx
src/renderer/src/components/widget/: Widget.tsx  WidgetHeader.tsx  index.ts
src/renderer/src/hooks/: index.ts  useAuth.ts  useSettingsSync.ts  useTheme.ts  useUsage.ts
src/renderer/src/services/: api.ts  index.ts  predictor.ts
src/renderer/src/stores/: index.ts  settingsStore.ts  usageStore.ts
src/renderer/src/styles/: widget.css
src/renderer/src/types/: app.ts  electron.ts  index.ts  settings.ts  tauri.ts  usage.ts
