[package]
name = "copilot-tracker"
version = "1.4.2"
edition = "2021"

[[bin]]
name = "copilot-tracker"
path = "src/main.rs"

[dependencies]
# Core
tauri = { version = "2", features = ["tray-icon", "devtools", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tray icon rendering
fontdue = "0.9"
tiny-skia = "0.11"
png = "0.17"

# URL parsing
url = "2.5"

# Plugins
# Pin to minor version (2.x) to allow compatible updates but prevent breaking changes
tauri-plugin-store = "2.0"
tauri-plugin-http = { version = "2.0", features = ["cookies", "json"] }
tauri-plugin-notification = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-opener = "2.0"
tauri-plugin-autostart = "2.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Date/time
chrono = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

# Version compare
semver = "1.0"
urlencoding = "2.1.3"

[build-dependencies]
tauri-build = { version = "2", features = ["codegen"] }

# Bundle configuration for Windows resource file generation
# Required for embedding icons in the Windows executable
[package.metadata.bundle]
icon = [
  "icons/32x32.png",
  "icons/64x64.png",
  "icons/128x128.png",
  "icons/128x128@2x.png",
  "icons/256x256.png",
  "icons/icon.icns",
  "icons/icon.ico",
  "icons/icon.png"
]

[profile.release]
codegen-units = 1  # Allows LLVM to perform better optimization
lto = true         # Enables link-time-optimizations
opt-level = "s"    # Prioritizes small binary size
panic = "abort"    # Higher performance by disabling panic handlers
strip = true       # Ensures debug symbols are removed
